# pydeserialize

./: .gitignore  CHANGELOG  README.md  mkdocs.yml  pydeserialize.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/: README.md  index.md
pydeserialize/: __init__.py  __main__.py  __meta__.py  encoded.py  pydeserialize.py  run.py
